feat: Added Prometheus metrics API
- added /api/metrics API to collect some metrics
- added counter how many random jokes were fetched yet
